# kyp

./: README.md
bricc/: Cargo.toml
bricc/src/: lib.rs
bricc/src/debug/: mod.rs  telnet.rs
bricc/src/gui/: menu.rs  mod.rs  text_input.rs  traits.rs
bricc/src/gui/panes/: contacts.rs  edit_contact_pane.rs  lockscreen.rs  mainmenu.rs  mod.rs  settings.rs
bricc/src/input/: traits.rs
bricc/src/network/: wifi.rs
bricc/src/prefs/: kv_store.rs
bricc/src/realtime/: mod.rs  rt_ctl.rs
bricc/src/voip/: mod.rs  sip.rs  stun.rs
esp32/: Cargo.toml
esp32/.cargo/: config.toml
esp32/src/: kv_store.rs  main.rs  rt_system.rs  wifi.rs
radium/: build.rs
radium/src/: lib.rs  types.rs
simulator/: .gitignore  Cargo.toml
simulator/src/: dummy_rt_system.rs  dummy_wifi.rs  input.rs  kv_store.rs  main.rs
