[package]
name = "bricc"
version = "0.1.0"
authors = ["Ellen Poe <ellen.h.poe@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
telnet = ["debug"]
debug = []

[dependencies]
log = "0.4.14"
embedded-graphics = "0.7.1"
embedded-text = "0.5.0"
profont = "0.5.0"
rsip-dns = "0.1.3"
rsip = "0.2.0"
smol = "1.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"