[package]
name = "bricc_esp32"
version = "0.1.0"
authors = ["Ellen Poe <ellen.h.poe@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]
framebuffer = []
telnet = ["bricc/telnet"]
default = [ "telnet", "experimental", "native" ]
experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

[dependencies]
esp-idf-sys = { version = "0.30.4", features = ["binstart"] }
esp-idf-svc = "0.36.4"
esp-idf-hal = "0.32.4"
embedded-svc = "0.16"
embedded-hal = "0.2"
embedded-graphics = "0.7"
bricc = { path = "../bricc"  }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
radium = { path = "../radium" }

[build-dependencies]
embuild = "0.28"
anyhow = "1"
