[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics-simulator = "0.3.0"
embedded-graphics = "0.7.1"
bricc = { path = "../bricc", features = ["telnet"] }
kv = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
telnet = []